add site header

--- a/index.html
+++ b/index.html
@@ -13,6 +13,23 @@
 </head>
 <body>
 
+  <div class="site-header-hero-wrapper">
+    <!-- SITE HEADER  -->
+    <header class="site-header">
+      <div class="container header-container">
+        <a class="header-logo-link" href="index.html">
+          <img class="header-logo-link-img" src="img/logo-img.svg" alt="logo img" width="235" height="24">
+        </a>
+        <nav class="sitenav">
+          <ul class="sitenav-list">
+            <li class="sitenav-link"><a class="sitenav-links" href="#">home</a></li>
+            <li class="sitenav-link"><a class="sitenav-links" href="#">about us</a></li>
+            <li class="sitenav-link"><a class="sitenav-links" href="#">create your plan</a></li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+  </div>
 
   <script src="js/main.js"></script>
 </body>
