--- a/index.html
+++ b/index.html
@@ -29,6 +29,23 @@
         </nav>
       </div>
     </header>
+
+
+    <!-- HERO  -->
+    <section class="hero">
+      <div class="container hero-container">
+        <div class="hero-info-wrapper">
+          <h1 class="hero-heading">
+            Good coffee<br>is made simply.
+          </h1>
+          <p class="hero-text">
+            Start your mornings with the world’s best coffees. Try our expertly curated artisan coffees from our best roasters delivered directly to your door, at your schedule.
+          </p>
+          <a class="button green-button" href="#">Create your plan</a>
+        </div>
+        <img class="hero-img hero-img-index" src="img/hero-img.jpg" alt="hero img coffee" width="710" height="696" srcset="img/hero-img.jpg 1x, img/hero-img@2x.jpg 2x">
+      </div>
+    </section>
   </div>
 
   <script src="js/main.js"></script>
