--- a/index.html
+++ b/index.html
@@ -48,6 +48,50 @@
     </section>
   </div>
 
+  <main class="main-content">
+    <div class="container">
+      <div class="main-content-inner">
+        <h2 class="main-heading">
+          our collection
+        </h2>
+        <ul class="index-collection-list">
+          <li class="index-collection-item">
+            <img class="index-collection-img" src="img/Danche.png" alt="Danche" width="450" height="375" srcset="img/Danche.png 1x, img/Danche@2x.png 2x">
+            <div class="index-collection">
+              <h3 class="index-collection-heading">danche</h3>
+              <p class="index-collextion-text">Ethiopian hand-harvested blend densely packed with vibrant fruit notes.</p>
+            </div>
+          </li>
+
+          <li class="index-collection-item">
+            <img class="index-collection-img" src="img/gran-espresso.png" alt="gran-espresso" width="450" height="375" srcset="img/gran-espresso.png 1x, img/gran-espresso@2x.png 2x">
+            <div class="index-collection">
+              <h3 class="index-collection-heading">Gran Espresso</h3>
+              <p class="index-collextion-text">Light and flavorful blend with cocoa and black pepper for an intense experience.</p>
+            </div>
+          </li>
+
+          <li class="index-collection-item">
+            <img class="index-collection-img" src="img/piccollo.png" alt="piccollo" width="450" height="375" srcset="img/piccollo.png 1x, img/piccollo@2x.png 2x">
+            <div class="index-collection">
+              <h3 class="index-collection-heading">Piccollo</h3>
+              <p class="index-collextion-text">Mild and smooth blend featuring notes of toasted almond and dried cherry.</p>
+            </div>
+          </li>
+
+          <li class="index-collection-item">
+            <img class="index-collection-img" src="img/planalto.png" alt="planalto" width="450" height="375" srcset="img/planalto.png 1x, img/planalto@2x.png 2x">
+            <div class="index-collection">
+              <h3 class="index-collection-heading">Planalto</h3>
+              <p class="index-collextion-text">Brazilian dark roast with rich and velvety body, and hints of fruits and nuts.</p>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </div>
+
+  </main>
+
   <script src="js/main.js"></script>
 </body>
 </html>
