add index features section

--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@
     </section>
   </div>
 
+
+  <!-- MAIN CONTENT  -->
   <main class="main-content">
     <div class="container">
       <div class="main-content-inner">
@@ -89,6 +91,52 @@
         </ul>
       </div>
     </div>
+
+
+    <!-- FEATURES  -->
+      <section class="index-features">
+        <div class="container">
+          <div class="index-features-inner">
+            <h2 class="index-features-heading">
+              Why choose us?
+            </h2>
+            <p class="index-features-lead">
+              A large part of our role is choosing which particular coffees will be featured <br> in our range. This means working closely with  the best coffee growers to give you a more impactful experience on every level.
+            </p>
+          <ul class="index-features-list">
+            <li class="index-features-item">
+              <img class="index-features-img" src="img/coffee-regester.jpg" alt="coffee-regester" width="433" height="500" srcset="img/coffee-regester.jpg 1x, img/coffee-regester@2x.jpg 2x">
+              <h3 class="index-features-bottom-heading">
+                Best quality
+              </h3>
+              <p class="index-features-text">
+                Discover an endless variety of the world’s best <br> artisan coffee from each of our roasters.
+              </p>
+            </li>
+
+            <li class="index-features-item">
+              <img class="index-features-img" src="img/coffee.jpg" alt="coffee" width="433" height="500" srcset="img/coffee.jpg 1x, img/coffee@2x.jpg 2x">
+              <h3 class="index-features-bottom-heading">
+                Exclusive benefits
+              </h3>
+              <p class="index-features-text">
+                Special offers and swag when you subscribe,<br> including 30% off your first shipment.
+              </p>
+            </li>
+
+            <li class="index-features-item">
+              <img class="index-features-img" src="img/coffee-and-fmale.jpg" alt="coffee-and-fmale" width="433" height="500" srcset="img/coffee-and-fmale.jpg 1x, img/coffee-and-fmale@2x.jpg 2x">
+              <h3 class="index-features-bottom-heading">
+                Free shipping
+              </h3>
+              <p class="index-features-text">
+                We cover the cost and coffee is delivered<br> fast. Peak freshness: guaranteed.
+              </p>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </section>
 
   </main>
 
