--- a/index.html
+++ b/index.html
@@ -43,7 +43,10 @@
           </p>
           <a class="button green-button" href="#">Create your plan</a>
         </div>
+        <div class="hero-bage-img">
+          <img class="hero-bage" src="img/hero-bage.png" alt="" width="160" height="160" srcset="img/hero-bage.png 1x, img/hero-bage@2x.png 2x">
         <img class="hero-img hero-img-index" src="img/hero-img.jpg" alt="hero img coffee" width="710" height="696" srcset="img/hero-img.jpg 1x, img/hero-img@2x.jpg 2x">
+        </div>
       </div>
     </section>
   </div>
@@ -89,6 +92,9 @@
             </div>
           </li>
         </ul>
+        <img class="index-collection-leaves-left" src="img/leaves-left.svg" alt="" width="371" height="371">
+        <img class="index-collection-leaves-right" src="img/leaves-right-mix.svg" alt="" width="546" height="592">
+        <img class="index-collection-leaves-left-light" src="img/leaves-left-light.svg" alt="" width="314" height="287">
       </div>
     </div>
 
@@ -181,6 +187,7 @@
             </li>
           </ol>
           <a class="button how-it-works-button" href="#">Create your plan</a>
+          <img class="how-it-works-sticker" src="img/coffee-first-sticker.png" alt="" width="227" height="192" srcset="img/coffee-first-sticker.png 1x, img/coffee-first-sticker@2x.png 2x">
         </div>
       </div>
     </section>
